envoy-proxy.yaml
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9910

static_resources:
  listeners:
  # http1 to grpc bridge (used by ocaml client to send grpc requests)
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9911
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: http1_bridge
          use_remote_address: true
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/dev/stdout"
          route_config:
            name: bridge_route
            virtual_hosts:
            - name: etcd-vhost
              # matches on Host header
              domains:
              - etcd
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: etcd-cluster
          http_filters:
          - name: envoy.filters.http.grpc_http1_bridge
            typed_config: {}
          - name: envoy.router
            typed_config: {}

  # grpc to http1 reverse bridge (used by ocaml server to receive grpc requests)
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9912
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: http1_rbridge
          use_remote_address: true
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: "/dev/stdout"
          route_config:
            name: rbridge_route
            virtual_hosts:
            - name: ocaml-vhost
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: ocaml-cluster
          http_filters:
          - name: envoy.filters.http.grpc_http1_reverse_bridge
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfig
              content_type: application/grpc
              withhold_grpc_frames: true
          - name: envoy.filters.http.router
            typed_config: {}

  clusters:
  - name: ocaml-cluster
    connect_timeout: 5.00s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ocaml-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: host.docker.internal
                port_value: 9986
    health_checks:
      http_health_check:
        path: "/ping"
      timeout: 1s
      interval: 30s
      healthy_threshold: 2
      unhealthy_threshold: 2
      event_log_path: "/dev/stdout"
  - name: etcd-cluster
    connect_timeout: 5.00s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: etcd-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: etcd.my-net
                port_value: 2379
